--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.1",
+    "react-map-gl-geocoder": "^2.0.11",
     "react-scripts": "3.3.0"
   },
   "scripts": {
