Update manifest and index.html with correct app name

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "You Came to the Right Neighborhood",
+  "name": "You Came to the Right Neighborhood",
   "icons": [
     {
       "src": "favicon.ico",
